--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,8 @@ body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: #000;
+  color: #fff;
 }
 
 :root {
@@ -58,6 +60,7 @@ header {
 
 main {
   flex-grow: 1;
+  height: 100%;
 }
 
 footer {
