--- a/src/pages/CurrentFilm/currentfilms.module.scss
+++ b/src/pages/CurrentFilm/currentfilms.module.scss
@@ -15,7 +15,7 @@
   width: 50%;
   position: absolute;
   left: 100px;
-  bottom: 150px;
+  bottom: 50px;
   font-size: 50px;
   line-height: 1.2;
   margin-bottom: 40px;
@@ -24,9 +24,9 @@
 
 .info {
   display: flex;
-  gap: 80px;
+  gap: 50px;
   padding-top: 110vh;
-
+  padding-bottom: 60px;
   p {
     font-size: 20px;
   }
@@ -36,7 +36,16 @@
   max-width: 500px;
   img {
     width: 300px;
+    margin-bottom: 40px;
   }
+}
+
+//.info_middle {
+//  //max-width: 600px;
+//}
+
+.info_right {
+  padding-top: 170px;
 }
 
 .info_title {
@@ -64,15 +73,72 @@ h4 {
   font-size: 25px;
 }
 
+h5 {
+  font-size: 18px;
+  margin-bottom: 22px;
+}
+
 .table_element {
   display: grid;
   grid-template-columns: 1fr 3fr;
-  grid-column-gap: 60px;
+  grid-column-gap: 10px;
   padding: 10px 0;
-  font-weight: 500;
+  font-weight: 600;
+  font-size: 14px;
   color: #999;
   dd {
-    font-weight: 600;
+    font-weight: 400;
     color: #fff;
+  }
+}
+
+.trailer {
+  width: 300px;
+  height: 200px;
+  background-color: #222;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.trailer__play {
+  width: 40px;
+  height: 40px;
+  transition: 0.5s;
+  &:hover {
+    stroke: #999;
+    transition: 0.5s;
+  }
+}
+
+.actor {
+  padding: 10px 0;
+  font-size: 14px;
+}
+
+.watchlogo {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+.where_to_watch {
+  div {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    p {
+      margin: 20px 0;
+    }
+    svg {
+      cursor: pointer;
+    }
+  }
+  li {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 10px 0;
   }
 }
