--- a/src/index.scss
+++ b/src/index.scss
@@ -118,3 +118,8 @@ footer {
   right: 10px !important;
   color: #fff !important;
 }
+
+.active {
+  border-bottom: 1px solid coral;
+  color: coral;
+}
