--- a/src/pages/CurrentFilm/currentfilms.module.scss
+++ b/src/pages/CurrentFilm/currentfilms.module.scss
@@ -24,7 +24,8 @@
 
 .info {
   display: flex;
-  gap: 50px;
+  //gap: 20px;
+  //justify-content: space-between;
   padding-top: 110vh;
   padding-bottom: 60px;
   p {
@@ -34,15 +35,17 @@
 
 .info_left {
   max-width: 500px;
+  margin-right: 30px;
   img {
     width: 300px;
     margin-bottom: 40px;
   }
 }
 
-//.info_middle {
-//  //max-width: 600px;
-//}
+.info_middle {
+  max-width: 700px;
+  margin-right: 30px;
+}
 
 .info_right {
   padding-top: 170px;
@@ -93,6 +96,7 @@ h5 {
 }
 
 .trailer {
+  position: relative;
   width: 300px;
   height: 200px;
   background-color: #222;
@@ -100,12 +104,26 @@ h5 {
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
+
+  img {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 300px;
+    height: 200px;
+    opacity: 0.4;
+    object-fit: cover;
+    object-position: center top;
+  }
 }
 
 .trailer__play {
   width: 40px;
   height: 40px;
   transition: 0.5s;
+  z-index: 10;
   &:hover {
     stroke: #999;
     transition: 0.5s;
