--- a/src/index.scss
+++ b/src/index.scss
@@ -120,6 +120,7 @@ footer {
 }
 
 .active {
-  border-bottom: 1px solid coral;
-  color: coral;
+  border-bottom: 2px solid coral;
+  padding-bottom: 8px;
+  color: #fff;
 }
