--- a/src/components/Lyout/Header/header.module.scss
+++ b/src/components/Lyout/Header/header.module.scss
@@ -1,3 +1,75 @@
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.search_wrapper {
+  position: relative;
+  width: 500px;
+  .search_input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline: none;
+    animation: slideIn 0.3s ease-in-out;
+  }
+
+  .search_result {
+    position: absolute;
+    top: 50px;
+    left: 0;
+    right: 0;
+    border-radius: 4px;
+    padding: 10px;
+
+    background-color: #fff;
+    color: #000;
+
+    .found_movie {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 10px;
+      .found_movie__img {
+        height: 70px;
+        width: 50px;
+      }
+      .found_movie__info {
+        font-size: 14px;
+
+        .found_movie__title {
+          font-weight: 700;
+        }
+        div {
+          display: flex;
+          gap: 10px;
+          span {
+            font-weight: 700;
+          }
+        }
+      }
+    }
+  }
+}
+
+.highRating {
+  color: #009900;
+}
+
+.mediumRating {
+  color: #66ff66;
+}
+.lowRating {
+  color: #777;
+}
+
 .header {
   padding-top: 40px;
   padding-bottom: 45px;
@@ -22,8 +94,25 @@ nav {
     li {
       font-size: 20px;
       font-weight: 600;
+      color: #777;
+      transition: 0.3s;
+
       &:hover {
+        transition: 0.3s;
+
         cursor: pointer;
+        color: #fff;
+      }
+      svg {
+        fill: #777;
+        width: 30px;
+        height: 30px;
+        transition: 0.3s;
+        &:hover {
+          transition: 0.3s;
+
+          fill: #fff;
+        }
       }
     }
   }
