--- a/src/components/Lyout/Header/header.module.scss
+++ b/src/components/Lyout/Header/header.module.scss
@@ -11,6 +11,7 @@
 
 .search_wrapper {
   position: relative;
+  margin: 0 auto;
   width: 500px;
 
   .search_input {
@@ -78,6 +79,10 @@
   gap: 200px;
   align-items: center;
   color: #fff;
+  @media (max-width: 756px) {
+    gap: 20px;
+    justify-content: space-between;
+  }
 }
 
 .logo {
@@ -86,18 +91,26 @@
   span {
     color: coral;
   }
+  @media (max-width: 576px) {
+    font-size: 30px;
+  }
 }
 
 nav {
   ul {
     display: flex;
     gap: 30px;
+    @media (max-width: 576px) {
+      gap: 10px;
+    }
     li {
       font-size: 20px;
       font-weight: 600;
       color: #777;
       transition: 0.3s;
-
+      @media (max-width: 576px) {
+        font-size: 18px;
+      }
       &:hover {
         transition: 0.3s;
 
