--- a/src/components/Sliders/sliders.module.scss
+++ b/src/components/Sliders/sliders.module.scss
@@ -7,8 +7,9 @@
     transform: scale(1.05);
   }
   img {
-    width: 200px;
-    height: 280px;
+    width: 100%;
+    height: 100%;
+    position: relative;
   }
   p {
     padding-top: 10px;
@@ -32,7 +33,7 @@
 .rating {
   position: absolute;
   top: 0;
-  left: 30px;
+  left: 0;
   width: 40px;
 }
 
@@ -48,5 +49,22 @@
 }
 
 .wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.wrapper__inner {
   position: relative;
+  width: 200px;
+  height: 280px;
+  @media (max-width: 756px) {
+    width: 180px;
+    height: 240px;
+  }
+}
+
+.film__name {
+  @media (max-width: 756px) {
+    font-size: 14px;
+  }
 }
