--- a/src/components/TopSlider/topslider.module.scss
+++ b/src/components/TopSlider/topslider.module.scss
@@ -21,6 +21,14 @@
   left: 80px;
   font-size: 40px;
   font-weight: 700;
+  @media (max-width: 756px) {
+    left: 30px;
+    font-size: 30px;
+  }
+  @media (max-width: 576px) {
+    left: 30px;
+    font-size: 26px;
+  }
 }
 
 .info {
@@ -29,6 +37,14 @@
   left: 80px;
   font-size: 20px;
   color: #999;
+  @media (max-width: 756px) {
+    left: 30px;
+    font-size: 18px;
+  }
+  @media (max-width: 756px) {
+    left: 30px;
+    font-size: 14px;
+  }
 }
 
 .link_btn {
@@ -45,5 +61,10 @@
     cursor: pointer;
     transition: 0.5s;
     background-color: coral;
+  }
+  @media (max-width: 756px) {
+    left: 30px;
+    font-size: 22px;
+    padding: 8px 30px;
   }
 }
