--- a/src/pages/CurrentFilm/currentfilms.module.scss
+++ b/src/pages/CurrentFilm/currentfilms.module.scss
@@ -20,55 +20,98 @@
   line-height: 1.2;
   margin-bottom: 40px;
   color: #d2b48c;
+  @media (max-width: 992px) {
+    font-size: 40px;
+  }
+  @media (max-width: 756px) {
+    font-size: 33px;
+    left: 30px;
+  }
+  @media (max-width: 576px) {
+    font-size: 28px;
+    left: 10px;
+  }
 }
 
 .info {
   display: flex;
-  //gap: 20px;
-  //justify-content: space-between;
+
   padding-top: 110vh;
+  padding-left: 40px;
   padding-bottom: 60px;
   p {
     font-size: 20px;
+  }
+  @media (max-width: 992px) {
+    flex-direction: column;
+    margin: 0 auto;
+    padding-left: 0px;
+    max-width: 400px;
   }
 }
 
 .info_left {
   max-width: 500px;
-  margin-right: 30px;
+  margin-right: 50px;
   img {
     width: 300px;
     margin-bottom: 40px;
+  }
+  @media (max-width: 992px) {
+    margin: 0 auto 40px;
   }
 }
 
 .info_middle {
   max-width: 700px;
   margin-right: 30px;
+  @media (max-width: 992px) {
+    margin: 0 auto 40px;
+  }
 }
 
-.info_right {
-  padding-top: 170px;
+.info_actors {
+  margin-top: -44px;
 }
-
+.info_middle_down {
+  display: flex;
+  gap: 20px;
+  @media (max-width: 992px) {
+    flex-direction: column;
+  }
+}
 .info_title {
   display: flex;
   gap: 60px;
   align-items: center;
   h2 {
-    font-size: 50px;
+    font-size: 40px;
+    @media (max-width: 992px) {
+      font-size: 30px;
+    }
   }
   span {
     color: #d2b48c;
     margin-right: 10px;
     font-weight: 600;
     font-size: 50px;
+    @media (max-width: 992px) {
+      font-size: 30px;
+    }
+  }
+  @media (max-width: 992px) {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
   }
 }
 
 h3 {
   color: #888;
   font-size: 30px;
+  @media (max-width: 992px) {
+    font-size: 20px;
+  }
 }
 
 h4 {
@@ -79,16 +122,22 @@ h4 {
 h5 {
   font-size: 18px;
   margin-bottom: 22px;
+  @media (max-width: 992px) {
+    margin-top: 50px;
+  }
 }
 
 .table_element {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 2fr;
   grid-column-gap: 10px;
   padding: 10px 0;
   font-weight: 600;
   font-size: 14px;
   color: #999;
+  @media (max-width: 992px) {
+    grid-column-gap: 30px;
+  }
   dd {
     font-weight: 400;
     color: #fff;
@@ -133,6 +182,11 @@ h5 {
 .actor {
   padding: 10px 0;
   font-size: 14px;
+  h5 {
+    @media (max-width: 992px) {
+      font-size: 14px;
+    }
+  }
 }
 
 .watchlogo {
